Update Profitable App Profile Analysis for the App Store and Google Play.ipynb

--- a/Profitable App Profile Analysis for the App Store and Google Play.ipynb
+++ b/Profitable App Profile Analysis for the App Store and Google Play.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "A data set containing data about approximately seven thousand iOS apps from the App Store. You can download the data set directly from [this link](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps).\n",
     "\n",
-    "**Disclaimer: This is guided project from the DataQuest's 'Python for Data Science: Fundamentals' course developed by learning purposes. Although it may look like other projects made for the same reason, this project has some features of its own implemented by me. If you are going to read this project all the way, take in consideration that this is my first project of this kind.**"
+    "**Disclaimer: This is guided project from the DataQuest's 'Python for Data Science: Fundamentals' course developed by learning purposes. Although it may look like other projects made for the same reason, this project has some features of its own implemented by me. If you are going to read this project all the way, keep in mind that this is my first project of this kind.**"
    ]
   },
   {
