--- a/Profitable App Profile Analysis for the App Store and Google Play.ipynb
+++ b/Profitable App Profile Analysis for the App Store and Google Play.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "A data set containing data about approximately seven thousand iOS apps from the App Store. You can download the data set directly from [this link](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps).\n",
     "\n",
-    "![](https://i413.photobucket.com/albums/pp211/ottobis/image_zpspkho5vtb.png)"
+    "![](https://i413.photobucket.com/albums/pp211/ottobis/image_zpspkho5vtb.png)\n",
+    "\n",
+    "Image:<a href=\"https://www.freepik.com/free-photos-vectors/technology\">Technology vector created by stories - www.freepik.com</a>"
    ]
   },
   {
