--- a/The Best Hour of the Day to Post on Hacker News - Analyzing the Posts' Data.ipynb
+++ b/The Best Hour of the Day to Post on Hacker News - Analyzing the Posts' Data.ipynb
@@ -238,7 +238,7 @@
        "    <tr>\n",
        "      <td>top</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Unwinding Ubers Most Efficient Service</td>\n",
+       "      <td>Employee benefits at Basecamp</td>\n",
        "      <td>http://www.aioptify.com/topmldmbooks.php?utm_s...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -330,18 +330,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                  id                                   title  \\\n",
-       "count   2.931190e+05                                  293119   \n",
-       "unique           NaN                                  269452   \n",
-       "top              NaN  Unwinding Ubers Most Efficient Service   \n",
-       "freq             NaN                                      15   \n",
-       "mean    1.133046e+07                                     NaN   \n",
-       "std     6.961055e+05                                     NaN   \n",
-       "min     1.017690e+07                                     NaN   \n",
-       "25%     1.071636e+07                                     NaN   \n",
-       "50%     1.130303e+07                                     NaN   \n",
-       "75%     1.193152e+07                                     NaN   \n",
-       "max     1.257901e+07                                     NaN   \n",
+       "                  id                          title  \\\n",
+       "count   2.931190e+05                         293119   \n",
+       "unique           NaN                         269452   \n",
+       "top              NaN  Employee benefits at Basecamp   \n",
+       "freq             NaN                             15   \n",
+       "mean    1.133046e+07                            NaN   \n",
+       "std     6.961055e+05                            NaN   \n",
+       "min     1.017690e+07                            NaN   \n",
+       "25%     1.071636e+07                            NaN   \n",
+       "50%     1.130303e+07                            NaN   \n",
+       "75%     1.193152e+07                            NaN   \n",
+       "max     1.257901e+07                            NaN   \n",
        "\n",
        "                                                      url     num_points  \\\n",
        "count                                              279256  293119.000000   \n",
@@ -401,18 +401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'hn_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-55a638c6383e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Creating the dataframes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ask hn'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mshow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'show hn'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mother\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ask hn'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m|\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mhn_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'show hn'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'hn_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Ask posts:  9139\n",
+      "Number of Show posts:  10158\n",
+      "Number of Other posts:  273822\n"
      ]
     }
    ],
@@ -1088,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1126,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
