Update Analysing FiveThirtyEight's 2014 Star Wars Survey.ipynb

--- a/Analysing FiveThirtyEight's 2014 Star Wars Survey.ipynb
+++ b/Analysing FiveThirtyEight's 2014 Star Wars Survey.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Analysing FiveThirtyEight's 2014 Star Wars Survey\n",
     "\n",
-    "In this project we'll be exploring, cleaning and analysing a data set abou Star Wars from the [FiveThirtyEight website](https://fivethirtyeight.com/).\n",
+    "In this project we'll be exploring, cleaning and analysing a data set abou Star Wars from the [FiveThirtyEight website](https://fivethirtyeight.com/). The main goal of this project to answer some questions about the popularity of each Star Wars episode.\n",
     "\n",
     "While waiting for Star Wars: The Force Awakens to come out, the team at FiveThirtyEight surveyed Star Wars fans using the online tool SurveyMonkey. They received 835 total responses, which you download from their [GitHub repository](https://github.com/fivethirtyeight/data/tree/master/star-wars-survey).The data has several columns, including:\n",
     "\n",
@@ -21,9 +21,7 @@
     "* Which character shot first?\n",
     "* Are you familiar with the Expanded Universe?\n",
     "\n",
-    "The main goal of this project to answer some questions about the popularity of each Star Wars episode.\n",
-    "\n",
-    "**Disclaimer: This is guided project from the DataQuest's \"Data Cleaning Project Walkthrough\" course developed by learning purposes. Although it may look like other projects made for the same reason, this project has some features of its own that were implemented by me. Every line of code in this project was though of and typed by me.**"
+    "\n"
    ]
   },
   {
