Update Analyzing CIA World Factbook with SQL.ipynb

--- a/Analyzing CIA World Factbook with SQL.ipynb
+++ b/Analyzing CIA World Factbook with SQL.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's set up the SQL environment and the open the database."
+    "First, let's set up the SQL environment and then open the database."
    ]
   },
   {
