Update Analyzing CIA World Factbook with SQL.ipynb

--- a/Analyzing CIA World Factbook with SQL.ipynb
+++ b/Analyzing CIA World Factbook with SQL.ipynb
@@ -20,33 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's set up the SQL environment and then open the database."
+    "First, let's set up the SQL environment and the open the database."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Engine(sqlite:///factbook.db)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sqlalchemy\n",
-    "sqlalchemy.create_engine('sqlite:///factbook.db')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +88,7 @@
        " ('table', 'sqlite_sequence', 'sqlite_sequence', 3, 'CREATE TABLE sqlite_sequence(name,seq)')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -245,7 +224,7 @@
        " (5, 'ao', 'Angola', 1246700, 1246700, 0, 19625353, 2.78, 38.78, 11.49, 0.46, '2015-11-01 13:20:08.625072', '2015-11-01 13:20:08.625072')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -288,18 +267,18 @@
        "        <th>min_pop_growth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>7256490011</td>\n",
-       "        <td>0</td>\n",
+       "        <td>1367485388</td>\n",
+       "        <td>48</td>\n",
        "        <td>4.02</td>\n",
        "        <td>0.0</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(7256490011, 0, 4.02, 0.0)]"
+       "[(1367485388, 48, 4.02, 0.0)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +309,7 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///factbook.db\n",
-      "1 rows affected.\n"
+      "0 rows affected.\n"
      ]
     },
     {
@@ -339,7 +318,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -362,7 +341,7 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///factbook.db\n",
-      "1 rows affected.\n"
+      "0 rows affected.\n"
      ]
     },
     {
@@ -371,7 +350,7 @@
        "[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -446,7 +425,7 @@
        "[(37, 'ch', 'China', 9596960, 9326410, 270550, 1367485388, 0.45, 12.49, 7.53, 0.44, '2015-11-01 13:22:53.813142', '2015-11-01 13:22:53.813142', 1367485388)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +500,7 @@
        "[(238, 'pc', 'Pitcairn Islands', 47, 47, 0, 48, 0.0, None, None, None, '2015-11-01 13:38:08.047849', '2015-11-01 13:38:08.047849', 48)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -571,7 +550,7 @@
        "[(32377011.0125, 555093.546184739)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -851,7 +830,7 @@
        " (192, 'vm', 'Vietnam', 331210, 310070, 21140, 94348835, 0.97, 15.96, 5.93, 0.3, '2015-11-01 13:35:42.896553', '2015-11-01 13:35:42.896553')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +878,7 @@
        "[(2,)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +974,7 @@
        " ('Liberia', 0.13512736937567904)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1077,7 @@
        " ('Mozambique', 38.58)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1179,7 @@
        " ('San Marino', 8.63)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1282,7 @@
        " ('Central African Republic', 13.8)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1379,7 @@
        " ('West Bank', 3.5)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -2465,7 +2444,7 @@
        " ('Denmark', 0.019999999999999574)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
