Update Analyzing CIA World Factbook with SQL.ipynb

--- a/Analyzing CIA World Factbook with SQL.ipynb
+++ b/Analyzing CIA World Factbook with SQL.ipynb
@@ -95,7 +95,8 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT * FROM sqlite_master WHERE type = 'table';"
+    "SELECT * FROM sqlite_master \n",
+    "WHERE type = 'table';"
    ]
   },
   {
@@ -231,7 +232,8 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT * FROM facts LIMIT 5 "
+    "SELECT * FROM facts \n",
+    "LIMIT 5 "
    ]
   },
   {
@@ -285,10 +287,11 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT MAX(population) as max_pop, \n",
-    "MIN(population) as min_pop, \n",
-    "MAX(population_growth) as max_pop_growth, \n",
-    "MIN(population_growth) as min_pop_growth\n",
+    "SELECT\n",
+    "    MAX(population) max_pop, \n",
+    "    MIN(population) min_pop, \n",
+    "    MAX(population_growth) max_pop_growth, \n",
+    "    MIN(population_growth) min_pop_growth\n",
     "FROM facts;"
    ]
   },
@@ -557,7 +560,10 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT AVG(population) as avg_pop, AVG(area) as avg_area FROM facts;"
+    "SELECT \n",
+    "    AVG(population) avg_pop, \n",
+    "    AVG(area) avg_area \n",
+    "FROM facts;"
    ]
   },
   {
@@ -839,7 +845,7 @@
     "%%sql\n",
     "SELECT * FROM facts\n",
     "WHERE population > (SELECT AVG(population) FROM facts)\n",
-    "and area < (SELECT AVG(area) FROM facts) ;"
+    "AND area < (SELECT AVG(area) FROM facts);"
    ]
   },
   {
@@ -867,7 +873,7 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>count(*)</th>\n",
+       "        <th>COUNT(*)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>2</td>\n",
@@ -885,8 +891,9 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT count(*) FROM facts\n",
-    "WHERE area_water > area_land ; "
+    "SELECT COUNT(*) \n",
+    "FROM facts\n",
+    "WHERE area_water > area_land; "
    ]
   },
   {
@@ -981,9 +988,11 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, cast(area_water as float) / cast(area as float)\n",
-    "as ratio FROM facts\n",
-    "ORDER BY ratio  DESC\n",
+    "SELECT \n",
+    "    name, \n",
+    "    CAST(area_water AS FLOAT) / CAST(area AS FLOAT) ratio \n",
+    "FROM facts\n",
+    "ORDER BY ratio DESC\n",
     "LIMIT 10;"
    ]
   },
@@ -1084,7 +1093,10 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, birth_rate\tFROM facts\n",
+    "SELECT \n",
+    "    name, \n",
+    "    birth_rate\n",
+    "FROM facts\n",
     "ORDER BY birth_rate DESC\n",
     "LIMIT 10;"
    ]
@@ -1186,7 +1198,10 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, birth_rate\tFROM facts\n",
+    "SELECT \n",
+    "    name, \n",
+    "    birth_rate\n",
+    "FROM facts\n",
     "WHERE birth_rate > 0\n",
     "ORDER BY birth_rate \n",
     "LIMIT 10;"
@@ -1289,8 +1304,11 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, death_rate\tFROM facts\n",
-    "ORDER BY death_rate\tDESC\n",
+    "SELECT \n",
+    "    name, \n",
+    "    death_rate\n",
+    "FROM facts\n",
+    "ORDER BY death_rate DESC\n",
     "LIMIT 10;"
    ]
   },
@@ -1386,9 +1404,12 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, death_rate\tFROM facts\n",
+    "SELECT \n",
+    "    name, \n",
+    "    death_rate\n",
+    "FROM facts\n",
     "WHERE death_rate > 0\n",
-    "ORDER BY death_rate\t\n",
+    "ORDER BY death_rate\n",
     "LIMIT 10;"
    ]
   },
@@ -2451,7 +2472,10 @@
    ],
    "source": [
     "%%sql\n",
-    "SELECT name, cast(birth_rate as float) - cast(death_rate as float) as birth_death_dif FROM facts\n",
+    "SELECT \n",
+    "    name, \n",
+    "    CAST(birth_rate as float) - cast(death_rate as float) birth_death_dif \n",
+    "FROM facts\n",
     "WHERE birth_death_dif > 0\n",
     "ORDER BY birth_death_dif DESC"
    ]
