--- a/Analyzing CIA World Factbook with SQL.ipynb
+++ b/Analyzing CIA World Factbook with SQL.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Analyzing CIA World Factbook with SQL\n",
     "\n",
+    "SQL is the short for Structured Query Language. It is a domain-specific language used in programming and designed for managing data held in a relational database management systems. According to [Wikipedia](https://en.wikipedia.org/wiki/SQL), it is particularly useful in handling structured data, i.e. data incorporating relations among entities and variables.\n",
+    "\n",
     "In this project, we'll work with data from the CIA World Factbook, a compendium of statistics about all of the countries on Earth, using only SQL. According to the [CIA website](https://www.cia.gov/library/publications/the-world-factbook/index.html) the World Factbook provides information on the history, people and society, government, economy, energy, geography, communications, transportation, military, and transnational issues for 267 world entities.\n",
     "\n",
     "We'll work with a reduced version of this database that can downloaded [here](https://dsserver-prod-resources-1.s3.amazonaws.com/257/factbook.db). The objective of the project is just to write some SQL queries to extract some interesting information from the CIA Factbook about the countries on Earth. \n",
