--- a/Analysing New York City Airbnb Data.ipynb
+++ b/Analysing New York City Airbnb Data.ipynb
@@ -2795,6 +2795,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Mo6eZxStU0be",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://www.imagemhost.com.br/images/2020/06/06/ny.jpg)\n",
+        "\n",
+        "This is just an image. GitHub does nos suport Folium's maps. If you want to interact with the map, click [here](https://nbviewer.jupyter.org/github/otavio-s-s/data_science/blob/master/%20Analysing%20New%20York%20City%20Airbnb%20Data.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vTneAMRUYvr1",
         "colab_type": "text"
       },
