--- a/Analysing New York City Airbnb Data.ipynb
+++ b/Analysing New York City Airbnb Data.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of [Template] Analisando os Dados do Airbnb.ipynb",
+      "name": "Analysing New York City Airbnb Data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -115,7 +115,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
       "source": [
         "ny.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
       "source": [
         "ny.info()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
       "source": [
         "(round(ny.isnull().sum() / ny.shape[0] * 100, 2)).sort_values(ascending=False)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
       "source": [
         "ny.hist(bins=15, figsize=(15,10));"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -550,7 +550,7 @@
         "ny[['price', 'minimum_nights', 'number_of_reviews', 'reviews_per_month',\n",
         "    'calculated_host_listings_count', 'availability_365']].describe()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +733,7 @@
         "print(len(ny[ny['price'] == 0]))\n",
         "print('{:.4f}%'.format((len(ny[ny['price'] == 0]) / ny.shape[0]) * 100))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -785,7 +785,7 @@
         "print(len(ny[ny['minimum_nights'] > 30]))\n",
         "print('{:.4f}%'.format((len(ny[ny['minimum_nights'] > 30]) / ny.shape[0]) * 100))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -851,7 +851,7 @@
         "# Plotting the histograms againd\n",
         "ny_clean.hist(bins=15, figsize=(15,10));"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -907,7 +907,7 @@
         "corr = ny_clean[['price', 'minimum_nights', 'number_of_reviews', 'calculated_host_listings_count', 'availability_365']].corr()\n",
         "corr"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1015,7 @@
       "source": [
         "sns.heatmap(corr, cmap='RdBu', fmt='.2f', square=True, linecolor='white', annot=True);"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1088,7 +1088,7 @@
         "for kew, spine in ax.spines.items():\n",
         "    spine.set_visible(False)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1165,7 @@
         "for kew, spine in ax.spines.items():\n",
         "    spine.set_visible(False)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1249,7 @@
         "for kew, spine in ax.spines.items():\n",
         "    spine.set_visible(False)\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1322,7 +1322,7 @@
         "for kew, spine in ax.spines.items():\n",
         "    spine.set_visible(False)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,7 +1399,7 @@
         "for kew, spine in ax.spines.items():\n",
         "    spine.set_visible(False)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,7 +1476,7 @@
       "source": [
         "ny_clean.plot(kind='scatter', x='longitude', y='latitude', alpha=0.4, c=ny_clean['price'], s=8, cmap=plt.get_cmap('jet'), figsize=(12,8));"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1551,7 +1551,7 @@
         "ny_big = pd.read_csv('http://data.insideairbnb.com/united-states/ny/new-york-city/2020-05-06/data/listings.csv.gz', compression='gzip')\n",
         "ny_big.shape"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,7 +1599,7 @@
       "source": [
         "ny_big.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2177,7 +2177,7 @@
         "zips = ny_big[['id', 'zipcode']]\n",
         "zips.shape"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2220,7 +2220,7 @@
         "merged = ny_clean.merge(right=zips, on='id', how='left')\n",
         "merged.info()"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2278,7 +2278,7 @@
       "source": [
         "merged['zipcode'].isnull().sum() / len(merged) * 100"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,7 +2321,7 @@
         "print('Null values: {}'.format(merged['zipcode'].isnull().sum()))\n",
         "merged.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2370,7 +2370,7 @@
       "source": [
         "merged['zipcode'].unique()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2462,7 +2462,7 @@
         "merged['zipcode'] = merged['zipcode'].astype(str)\n",
         "merged['zipcode'].unique()"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2531,7 +2531,7 @@
       "source": [
         "merged[merged['zipcode'] == '']"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2637,7 +2637,7 @@
         "merged.reset_index(drop=True, inplace=True)\n",
         "merged.shape"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2773,7 +2773,7 @@
         "fig.add_child(m)\n",
         "m"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2799,9 +2799,14 @@
         "colab_type": "text"
       },
       "source": [
-        "![alt text](https://www.imagemhost.com.br/images/2020/06/06/ny.jpg)\n",
+        "<p align=\"center\">\n",
+        "  <img  src=\"https://www.imagemhost.com.br/images/2020/06/06/ny.jpg\">\n",
+        "</p>\n",
         "\n",
-        "This is just an image. GitHub does nos suport Folium's maps. If you want to interact with the map, click [here](https://nbviewer.jupyter.org/github/otavio-s-s/data_science/blob/master/%20Analysing%20New%20York%20City%20Airbnb%20Data.ipynb)"
+        "<p align=\"center\">\n",
+        "This is just an image. GitHub does nos suport Folium's maps. If you want to interact with the map, click\n",
+        "<a align=\"center\"href=\"https://nbviewer.jupyter.org/github/otavio-s-s/data_science/blob/master/%20Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">here</a> or see this project on <a align=\"center\"href=\"https://colab.research.google.com/github/otavio-s-s/data_science/blob/master/Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">Colab</a>.\n",
+        "</p>"
       ]
     },
     {
