--- a/Analysing New York City Airbnb Data.ipynb
+++ b/Analysing New York City Airbnb Data.ipynb
@@ -2795,7 +2795,7 @@
         "\n",
         "<p align=\"center\">\n",
         "This is just an image. GitHub does not support Folium's maps. If you want to interact with the map, click\n",
-        "<a align=\"center\"href=\"https://nbviewer.jupyter.org/github/otavio-s-s/data_science/blob/master/%20Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">here</a> or see this project on <a align=\"center\"href=\"https://colab.research.google.com/github/otavio-s-s/data_science/blob/master/Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">Colab</a>.\n",
+        "<a align=\"center\"href=\"https://nbviewer.jupyter.org/github/otavio-s-s/data_science/blob/master/Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">here</a> or see this project on <a align=\"center\"href=\"https://colab.research.google.com/github/otavio-s-s/data_science/blob/master/Analysing%20New%20York%20City%20Airbnb%20Data.ipynb\">Colab</a>.\n",
         "</p>"
       ]
     },
