--- a/Analysing New York City Airbnb Data.ipynb
+++ b/Analysing New York City Airbnb Data.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Analysing New York City Airbnb Datas**\n",
+        "# **Analysing New York City Airbnb Data**\n",
         "\n",
         "[Airbnb](https://www.https://www.airbnb.com/) is considered one of the [biggest hotel chains in the world](https://www.theguardian.com/technology/2019/may/05/airbnb-homelessness-renting-housing-accommodation-social-policy-cities-travel-leisure). And it does not own a single hotel room!\n",
         "\n",
