--- a/Analisando Dados Sobre a Violência no Rio de Janeiro.ipynb
+++ b/Analisando Dados Sobre a Violência no Rio de Janeiro.ipynb
@@ -1287,7 +1287,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Vericamos que o número de veículos roubados variou consideravelmente ao longo do período em questão. Após uma forte queda na segunda metade da primeira década dos anos 2000, o número de veículos roubados disparou até atingir seu [pico em 2018](https://odia.ig.com.br/rio-de-janeiro/2018/04/5531788-roubo-de-carros-bate-recorde-historico-no-rio.html).\n",
+        "Verificamos que o número de veículos roubados variou consideravelmente ao longo do período em questão. Após uma forte queda na segunda metade da primeira década dos anos 2000, o número de veículos roubados disparou até atingir seu [pico em 2018](https://odia.ig.com.br/rio-de-janeiro/2018/04/5531788-roubo-de-carros-bate-recorde-historico-no-rio.html).\n",
         "\n",
         "O número de veículos recuperados acompanhou, durante a maior parte do tempo o número de roubos, em alguns momentos com os números das duas séries se aproximando significativamente, o que pode indicar uma melhor abordagem das forças de segurança ao problema em alguns peroídos.\n",
         "\n",
@@ -1492,7 +1492,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Os valores estão realtivamente bem distribuídos, com a maior parte dos dados em torno da média. No entanto, existem alguns valores mais altos com baixa frequência, que podem ser *outliers*. Vamos criar um *boxplot* para invertigar melhor esta possibilidade."
+        "Os valores estão relativamente bem distribuídos, com a maior parte dos dados em torno da média. No entanto, existem alguns valores mais altos com baixa frequência, que podem ser *outliers*. Vamos criar um *boxplot* para invertigar melhor esta possibilidade."
       ]
     },
     {
@@ -1808,7 +1808,7 @@
       "source": [
         "Como esperado, não existem mais *outliers*.\n",
         "\n",
-        "Em uma útilma etapa antes de criarmos o modelo, vamos resetar o índice e renomear as colunas para o padrão exigido pelo `fbprophet`.\n"
+        "Em uma última  etapa antes de criarmos o modelo, vamos resetar o índice e renomear as colunas para o padrão exigido pelo `fbprophet`.\n"
       ]
     },
     {
