--- a/Analisando Dados Sobre a Violência no Rio de Janeiro.ipynb
+++ b/Analisando Dados Sobre a Violência no Rio de Janeiro.ipynb
@@ -2427,7 +2427,7 @@
         "* O estado se tornou mais eficiente na recuperação de veículos roubados;\n",
         "* O número de roubos de veículos aumentou drasticamente na última década;\n",
         "* Números de furtos de veículos têm estado estáveis desde a década de 1990;\n",
-        "* Os casos de homicídios dolosos apresentam forte tendência de de queda ao longo de todo o período e espera-se que continue assim.\n"
+        "* Os casos de homicídios dolosos apresentam forte tendência de queda ao longo de todo o período e espera-se que continue assim.\n"
       ]
     }
   ]
